# tccutil-rs

./: .gitignore  .releaserc.json  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  REVIEW.md  SECURITY.md  install.sh  release-plz.toml
.claude/: CLAUDE.md  settings.json
.claude/rules/: coding.md  rust.md  testing.md  typescript.md
.git-hooks/: pre-push
.github/: dependabot.yml
.github/workflows/: ci.yml  release-plz.yml  release.yml
scripts/: install.sh  release-prepare.sh  setup-hooks.sh  verify.sh
src/: main.rs  tcc.rs
tests/: integration.rs
